; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_audioio.c_audioio_start.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_audioio.c_audioio_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@AUDIO_GETINFO = common dso_local global i32 0, align 4
@AUDIO_SETINFO = common dso_local global i32 0, align 4
@AUDIO_FLUSH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @audioio_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @audioio_start(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.audio_info, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @AUDIO_GETINFO, align 4
  %13 = call i64 @ioctl(i32 %11, i32 %12, %struct.audio_info* %6)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.audio_info, %struct.audio_info* %6, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 0, i32* %18, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @AUDIO_SETINFO, align 4
  %22 = call i64 @ioctl(i32 %20, i32 %21, %struct.audio_info* %6)
  %23 = icmp eq i64 %22, 0
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @ioctl(i32, i32, %struct.audio_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
